--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
 					</div>
 					<div class="col-md-6 wrap-about py-md-5 ftco-animate">
 	          <div class="heading-section p-md-5" style="text-align: center;">
-	            <h2 class="mb-4">تأرجح خارج الشاليهات </h2>
+	            <h2 class="mb-4">شاليهات</h2>
 
 	            <p>
                 الارتفاع 🔺٢٠ مترًا فوق مستوى سطح البحر 🌊
@@ -767,7 +767,7 @@
               </p> -->
             
             <h2 class="mb-2">
-              شاليهات ملحمية
+              شاليهات
             </h2>
 
 
@@ -935,7 +935,7 @@
 
 
 
-	            <h2 class="mb-4" style="text-align: center;">منازل المدينة </h2>
+	            <h2 class="mb-4" style="text-align: center;"> تاون هاوس فيلا </h2>
 
 	            <p>
                 جميع الوحدات:
@@ -985,16 +985,13 @@
 
 
 
-
-
-
     <section class="ftco-section ftco-no-pb">
 			<div class="container" >
 				<div class="row no-gutters">
 					
 					<div class="col-md-6 wrap-about py-md-5 ftco-animate">
 	          <div class="cc p-md-5" >
-	            <h2 class="mb-4"> الوقوف بمفردك </h2>
+	            <h2 class="mb-4"> فيلا مستقلة ( Stand Alone Villa ) </h2>
 
                           <p>
 
